--- a/Project/STM32L152RB-TNI/MDK-ARM/Objects/STM32L152-TNI.build_log.htm
+++ b/Project/STM32L152RB-TNI/MDK-ARM/Objects/STM32L152-TNI.build_log.htm
@@ -21,40 +21,27 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Users\Goragod\Desktop\Workspace\STM32L152_CPE-214-312\Project\STM32L152RB-TNI\MDK-ARM\STM32L152-TNI.uvprojx
-Project File Date:  07/25/2018
+C:\Users\Goragod\Desktop\Workspace\CPE-312-1-61\Project\STM32L152RB-TNI\MDK-ARM\STM32L152-TNI.uvprojx
+Project File Date:  08/24/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
-Rebuild target 'Workspace'
-assembling startup_stm32l152xb.s...
-compiling system_stm32l1xx.c...
-compiling stm32l1xx_ll_lcd.c...
-compiling stm32l1xx_ll_gpio.c...
-compiling stm32l1xx_ll_pwr.c...
-compiling stm32l1xx_ll_rcc.c...
-compiling stm32l1xx_ll_utils.c...
-compiling stm32l1xx_ll_exti.c...
-compiling stm32l1xx_ll_tim.c...
-compiling stm32l1xx_ll_usart.c...
-compiling stm32l1xx_ll_spi.c...
-compiling stm32l152_glass_lcd.c...
-compiling main.c...
-..\src\main.c(209): warning:  #1-D: last line of file ends without a newline
-  /************************ (C) COPYRIGHT STMicroelectronics *****END OF FILE****/
-..\src\main.c: 1 warning, 0 errors
-compiling RTX_Conf_CM.c...
+Build target 'Workspace'
+compiling usart.c...
+..\src\usart.c(242): warning:  #940-D: missing return statement at end of non-void function "rb_get_char" 
+  }
+..\src\usart.c: 1 warning, 0 errors
 linking...
-Program Size: Code=4260 RO-data=320 RW-data=64 ZI-data=14688  
+Program Size: Code=3300 RO-data=312 RW-data=12 ZI-data=1900  
 FromELF: creating hex file...
 ".\Objects\STM32L152-TNI.axf" - 0 Error(s), 1 Warning(s).
 
 <h2>Collection of Component include folders:</h2>
-  C:\Users\Goragod\Desktop\Workspace\STM32L152_CPE-214-312\Project\STM32L152RB-TNI\MDK-ARM\RTE
+  C:\Users\Goragod\Desktop\Workspace\CPE-312-1-61\Project\STM32L152RB-TNI\MDK-ARM\RTE
   C:\Keil_v5\ARM\PACK\Keil\STM32L1xx_DFP\1.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
